--- a/index.html
+++ b/index.html
@@ -7,6 +7,63 @@
 		<link rel="stylesheet" href="./main.css">
 	</head>
 	<body>
-
+		<header id="header">
+			<h1 id="title">
+				Shadow Survey
+			</h1>
+			<p id="description">
+				Thank you for taking the time to help us
+			</p>
+		</header>
+		<main id="main">
+			<form id="survey-form">
+				<label id="name-label" for="name">Name</label>
+				<input id="name" name="name" type="text" placeholder="Enter your full name" required>
+				<label id="email-label" for="email">Email</label>
+				<input id="email" name="email" type="email" placeholder="Enter your email ID" required>
+				<label id="number-label" for="number">Age</label>
+				<input id="number" name="number" type="number" placeholder="Enter your age" min="1" max="100" required>
+				<label id="dropdown-label" for="dropdown">Which option best describes your current role</label>
+				<select id="dropdown" name="dropdown" required>
+					<option disabled="" selected="" value="">Select current role</option>
+					<option value="student">Student</option>
+					<option value="fulltime">Full Time</option>
+					<option value="preferNot">Prefer not to say</option>
+					<option value="other">Other</option>
+				</select>
+				<input type="radio" id="male" name="gender" value="male">
+				<label for="male">Male</label><br>
+				<input type="radio" id="female" name="gender" value="female">
+				<label for="female">Female</label><br>
+				<input type="radio" id="other" name="gender" value="other">
+				<label for="other">Other</label>
+				<label>
+					<input class="checkbox" type="checkbox" name="editor" value="vscode">
+					VS Code
+				</label>
+				<label>
+					<input class="checkbox" type="checkbox" name="editor" value="atom">
+					Atom
+				</label>
+				<label>
+					<input class="checkbox" type="checkbox" name="editor" value="sublime">
+					Sublime Text
+				</label>
+				<label>
+					<input class="checkbox" type="checkbox" name="editor" value="vim">
+					Vim
+				</label>
+				<label>
+					<input class="checkbox" type="checkbox" name="editor" value="other">
+					Other
+				</label>
+				<label for="comments">
+					Any comments or suggestions?
+				</label>
+				<textarea id="comments" name="comments" placeholder="Enter your comments here...">
+				</textarea>
+				<button id="submit" type="submit">Submit</button>
+			</form>
+		</main>
 	</body>
 </html>
