Add headers to form elements

--- a/index.html
+++ b/index.html
@@ -31,12 +31,14 @@
 					<option value="preferNot">Prefer not to say</option>
 					<option value="other">Other</option>
 				</select>
+				<label id="gender-title">Gender</label>
 				<input type="radio" id="male" name="gender" value="male">
 				<label for="male">Male</label><br>
 				<input type="radio" id="female" name="gender" value="female">
 				<label for="female">Female</label><br>
 				<input type="radio" id="other" name="gender" value="other">
 				<label for="other">Other</label>
+				<label id="editor-title">Favorite text editor (choose all that apply)</label>
 				<label>
 					<input class="checkbox" type="checkbox" name="editor" value="vscode">
 					VS Code
@@ -60,8 +62,7 @@
 				<label for="comments">
 					Any comments or suggestions?
 				</label>
-				<textarea id="comments" name="comments" placeholder="Enter your comments here...">
-				</textarea>
+				<textarea id="comments" name="comments" placeholder="Enter your comments here..."></textarea>
 				<button id="submit" type="submit">Submit</button>
 			</form>
 		</main>
