Add class to radio buttons and labels

--- a/index.html
+++ b/index.html
@@ -32,12 +32,12 @@
 					<option value="other">Other</option>
 				</select>
 				<label id="gender-title">Gender</label>
-				<input type="radio" id="male" name="gender" value="male">
-				<label for="male">Male</label><br>
-				<input type="radio" id="female" name="gender" value="female">
-				<label for="female">Female</label><br>
-				<input type="radio" id="other" name="gender" value="other">
-				<label for="other">Other</label>
+				<input type="radio" id="male" class="gender radio" name="gender" value="male">
+				<label for="male" class="gender">Male</label><br>
+				<input type="radio" id="female" class="gender radio" name="gender" value="female">
+				<label for="female" class="gender">Female</label><br>
+				<input type="radio" id="other" class="gender radio" name="gender" value="other">
+				<label for="other" class="gender">Other</label>
 				<label id="editor-title">Favorite text editor (choose all that apply)</label>
 				<label>
 					<input class="checkbox" type="checkbox" name="editor" value="vscode">
