Wrap radio buttons in a section tag

--- a/index.html
+++ b/index.html
@@ -40,13 +40,15 @@
 				</select>
 
 				<!-- Gender -->
-				<label id="gender-title">Gender</label>
-				<input type="radio" id="male" class="gender radio" name="gender" value="male">
-				<label for="male" class="gender">Male</label><br>
-				<input type="radio" id="female" class="gender radio" name="gender" value="female">
-				<label for="female" class="gender">Female</label><br>
-				<input type="radio" id="other" class="gender radio" name="gender" value="other">
-				<label for="other" class="gender">Other</label>
+				<section id="gender-section">
+					<label id="gender-title">Gender</label>
+					<input type="radio" id="male" class="gender radio" name="gender" value="male">
+					<label for="male" class="gender">Male</label><br>
+					<input type="radio" id="female" class="gender radio" name="gender" value="female">
+					<label for="female" class="gender">Female</label><br>
+					<input type="radio" id="other" class="gender radio" name="gender" value="other">
+					<label for="other" class="gender">Other</label>
+				</section>
 
 				<!-- Editor -->
 				<label id="editor-title">Favorite text editor (choose all that apply)</label>
