Wrap checkboxes in a section tag

--- a/index.html
+++ b/index.html
@@ -51,27 +51,29 @@
 				</section>
 
 				<!-- Editor -->
-				<label id="editor-title">Favorite text editor (choose all that apply)</label>
-				<label>
-					<input class="checkbox" type="checkbox" name="editor" value="vscode">
-					VS Code
-				</label>
-				<label>
-					<input class="checkbox" type="checkbox" name="editor" value="atom">
-					Atom
-				</label>
-				<label>
-					<input class="checkbox" type="checkbox" name="editor" value="sublime">
-					Sublime Text
-				</label>
-				<label>
-					<input class="checkbox" type="checkbox" name="editor" value="vim">
-					Vim
-				</label>
-				<label>
-					<input class="checkbox" type="checkbox" name="editor" value="other">
-					Other
-				</label>
+				<section id="editor-header">
+					<label id="editor-title">Favorite text editor (choose all that apply)</label>
+					<label>
+						<input class="checkbox" type="checkbox" name="editor" value="vscode">
+						VS Code
+					</label>
+					<label>
+						<input class="checkbox" type="checkbox" name="editor" value="atom">
+						Atom
+					</label>
+					<label>
+						<input class="checkbox" type="checkbox" name="editor" value="sublime">
+						Sublime Text
+					</label>
+					<label>
+						<input class="checkbox" type="checkbox" name="editor" value="vim">
+						Vim
+					</label>
+					<label>
+						<input class="checkbox" type="checkbox" name="editor" value="other">
+						Other
+					</label>
+				</section>
 
 				<!-- Comments -->
 				<label for="comments">
