Change class name for checkboxes section

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 				</section>
 
 				<!-- Editor -->
-				<section id="editor-header">
+				<section id="editor-section">
 					<label id="editor-title">Favorite text editor (choose all that apply)</label>
 					<label>
 						<input class="checkbox" type="checkbox" name="editor" value="vscode">
