Add id to comments label

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 				</section>
 
 				<!-- Comments -->
-				<label for="comments">
+				<label id="comments-label" for="comments">
 					Any comments or suggestions?
 				</label>
 				<textarea id="comments" name="comments" placeholder="Enter your comments here..."></textarea>
