Wrap submit button in a div

--- a/index.html
+++ b/index.html
@@ -82,7 +82,9 @@
 				<textarea id="comments" name="comments" placeholder="Enter your comments here..."></textarea>
 
 				<!-- Submit -->
-				<button id="submit" type="submit">Submit</button>
+				<div id="btn">
+					<button id="submit" type="submit">Submit</button>
+				</div>
 			</form>
 		</main>
 	</body>
